实现全局事务支持

--- a/demo/src/main/resources/templates/main.html
+++ b/demo/src/main/resources/templates/main.html
@@ -80,7 +80,7 @@ $(function(){
 		pageInfo:{pageNum:"pageNum", numPerPage:"numPerPage", orderField:"orderField", orderDirection:"orderDirection"}, //【可选】
 		keys: {statusCode:"statusCode", message:"message"}, //【可选】
 		ui:{hideMode:'offsets'}, //【可选】hideMode:navTab组件切换的隐藏方式，支持的值有’display’，’offsets’负数偏移位置的值，默认值为’display’
-		debug:false,	// 调试模式 【true|false】
+		debug:true,	// 调试模式 【true|false】
 		callback:function(){
 			initEnv();
 			$("#themeList").theme({themeBase:"[[@{dwz_jui/themes}]]"}); // themeBase 相对于index页面的主题base路径
@@ -172,14 +172,11 @@ $(function(){
 				<div class="navTab-panel tabsPageContent layoutBox">
 					<div class="page unitBox">
 						<div class="pageFormContent" layoutH="80" style="margin-right:230px">
-						<!-- 在这里编写自定义内容 -->
-						<p>[[${#lookups.text('common_state','1')}]]</p>
-						</div>
-						<div style="width:230px;position: absolute;top:60px;right:0" layoutH="80">
-							<iframe width="100%" height="430" class="share_self"  frameborder="0" scrolling="no" src="http://widget.weibo.com/weiboshow/index.php?width=0&height=430&fansRow=2&ptype=1&skin=1&isTitle=0&noborder=1&isWeibo=1&isFans=0&uid=1739071261&verifier=c683dfe7"></iframe>
+							<!-- 自定义内容开始 -->
+							<p>[[${#lookups.text('common_state','1')}]]</p>
+							<!-- 自定义内容结束 -->
 						</div>
 					</div>
-					
 				</div>
 			</div>
 		</div>
